ping-and-log/log-output/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  labels:
    project: log-output
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 8080
